2007-09-07  Thomas Heller  <theller@python.net>

	* build_exe.py: Patch from Grant Edwards, slightly adjusted:
	py2exe now renames the pyd files that it copies into the dist
	directory so that they include the package name.  This prevents
	name conflicts.

2006-12-27  Jimmy Retzlaff  <jimmy@retzlaff.com>

	* boot_common.py: Handle new parameter to fake_getline in Python 2.5
	as suggested by Tim Tucker.

2006-11-22  Thomas Heller  <theller@python.net>

	* py2exe does now work sort-of on win64, with a 64-bit build of
	Python.

	* On win64, complain if bundle_files < 3.  This is not yet
	supported since the code in source\MemoryModule.c does not work on
	win64.

	* Updated the mktab.py script (which generates import-tab.c and
	import-tab.h) for Py_ssize_t and the definition of PyInit_Module4
	on win64.  Regenerated import-tab.c and import-tab.h.

	* build_exe.py: Don't copy w9xpopen.exe if it does not exist (on a
	64-bit Python installation, for example).

	* build_exe.py: Add gdiplus.dll to the list of excluded dlls.

2006-12-27  Jimmy Retzlaff  <jimmy@retzlaff.com>

	* test:
		* Run all tests with and without the --compression option - this
		  catches the problems zlib problem with Python 2.5.
		* Added a test case that cathces the sys.path regression.

2006-10-24  Mark Hammond  <mhammond@skippinet.com.au>

	* start.c:
		* Add calc_dirname() which calculates the dirname global, and call this
		  from _InitPython, so _InitPython can be called externally before
		  init_with_instance
		* My most recent checkin did not update sys.frozen to the new value if
		  Python was already initialized.  Although that is all nasty hackery,
		  it now works as before (ie, sys.frozen is set to the new value)

	* run_isapi.c:
		* Load Python before the ISAPI extension module, as that module itself
		  depends on Python.
		* Write an event log error when the ISAPI module failed to load.

2006-10-18  Mark Hammond  <mhammond@skippinet.com.au>

	* boot_com_servers.py:
